--- a/package.json
+++ b/package.json
@@ -6,23 +6,21 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
+    "lint": "biome lint .",
+    "lint:fix": "biome check --write",
+    "format": "biome check --write",
+    "format:check": "biome check",
     "preview": "vite preview",
-    "prepare": "husky",
-    "convert-yaml": "node scripts/yaml-to-json.js",
-    "dev:yaml": "npm run convert-yaml && npm run dev",
-    "setup": "node scripts/setup-starter-kit.js"
+    "convert-yaml": "bun scripts/yaml-to-json.js",
+    "dev:yaml": "bun run convert-yaml && bun run dev",
+    "setup": "bun scripts/setup-starter-kit.js"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
+      "biome check --write"
     ],
     "*.{json,css,md}": [
-      "prettier --write"
+      "biome check --write"
     ]
   },
   "dependencies": {
@@ -46,6 +44,7 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.11",
     "@eslint/js": "^9.35.0",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
