--- a/src/data/government.yaml
+++ b/src/data/government.yaml
@@ -2,56 +2,66 @@
 # This file contains all the local government activity data for the local government portal
 # Non-technical users can easily edit this file to add, remove, or modify local government activity
 
+name: "Municipality of Plaridel"
+type: "Municipality"
+region: "Region III"
+province: "Bulacan"
+mayor: "Jocell Aimee R. Vistan-Casaje"
+vice_mayor: "Mhel Gatdula De Leon"
+established: "1602"
+population: "120,939"
+area: "32.44 km²"
+
 categories:
-  - category: 'Departments'
-    slug: 'departments'
-    description: 'Explore local government departments, agencies, and offices with their mandates, services, and contact details.'
-    icon: 'Building2'
+  - category: "Departments"
+    slug: "departments"
+    description: "Explore local government departments, agencies, and offices with their mandates, services, and contact details."
+    icon: "Building2"
     subcategories:
-      - name: 'Department of Education'
-        slug: 'department-of-education'
-      - name: 'Department of Health'
-        slug: 'department-of-health'
-      - name: 'Department of Transportation'
-        slug: 'department-of-transportation'
-  - category: 'News'
-    slug: 'news'
-    description: 'Stay informed with the latest local government news, announcements, and policy updates.'
-    icon: 'Newspaper'
+      - name: "Department of Education"
+        slug: "department-of-education"
+      - name: "Department of Health"
+        slug: "department-of-health"
+      - name: "Department of Transportation"
+        slug: "department-of-transportation"
+  - category: "News"
+    slug: "news"
+    description: "Stay informed with the latest local government news, announcements, and policy updates."
+    icon: "Newspaper"
     subcategories:
-      - name: 'News'
-        slug: 'news'
-      - name: 'Announcements'
-        slug: 'announcements'
-  - category: 'Guides and Regulations'
-    slug: 'guides-and-regulations'
-    description: 'Access guidelines, rules, regulations, and step-by-step instructions for local government processes.'
-    icon: 'Book'
+      - name: "News"
+        slug: "news"
+      - name: "Announcements"
+        slug: "announcements"
+  - category: "Guides and Regulations"
+    slug: "guides-and-regulations"
+    description: "Access guidelines, rules, regulations, and step-by-step instructions for local government processes."
+    icon: "Book"
     subcategories:
-      - name: 'Guides'
-        slug: 'guides'
-      - name: 'Regulations'
-        slug: 'regulations'
-  - category: 'Reports and Statistics'
-    slug: 'reports-and-statistics'
-    description: 'Access local government reports, statistical data, and performance metrics.'
-    icon: 'ChartBar'
+      - name: "Guides"
+        slug: "guides"
+      - name: "Regulations"
+        slug: "regulations"
+  - category: "Reports and Statistics"
+    slug: "reports-and-statistics"
+    description: "Access local government reports, statistical data, and performance metrics."
+    icon: "ChartBar"
     subcategories:
-      - name: 'Reports'
-        slug: 'reports'
-      - name: 'Statistics'
-        slug: 'statistics'
-  - category: 'Public Consultations'
-    slug: 'public-consultations'
-    description: 'Participate in public consultations and provide feedback on local government decisions.'
-    icon: 'MessagesSquare'
+      - name: "Reports"
+        slug: "reports"
+      - name: "Statistics"
+        slug: "statistics"
+  - category: "Public Consultations"
+    slug: "public-consultations"
+    description: "Participate in public consultations and provide feedback on local government decisions."
+    icon: "MessagesSquare"
     subcategories:
-      - name: 'Public Consultations'
-        slug: 'public-consultations'
-  - category: 'Transparency Documents'
-    slug: 'transparency-documents'
-    description: 'Access Freedom of Information releases and transparency documents for local government accountability.'
-    icon: 'FileText'
+      - name: "Public Consultations"
+        slug: "public-consultations"
+  - category: "Transparency Documents"
+    slug: "transparency-documents"
+    description: "Access Freedom of Information releases and transparency documents for local government accountability."
+    icon: "FileText"
     subcategories:
-      - name: 'Transparency Documents'
-        slug: 'transparency-documents'
+      - name: "Transparency Documents"
+        slug: "transparency-documents"
